...
      <FilterChip
        label="카테고리"
        mini={isMini}
        showDisclosure={!isMini}
        active={isMini ? selectedMode === "category" : false}
        onPress={() => onOpenFilter("category")}
        testID="e2e.filter.open.category"
      />
      <FilterChip
        label="브랜드"
        mini={isMini}
        showDisclosure={!isMini}
        active={isMini ? selectedMode === "brand" : false}
...
